[package]
name = "crab-go"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.12.0", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }

[features]
default = []
rt-tokio = ["tokio"]
rt-async-std = ["async-std"]
rt-native = []
rt-custom = []
